--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 
       <input type="text" placeholder="Final score" class="final-score" value="" />
 
-      <img src="./images/dice-5.png" alt="Dice" class="dice" />
+      <img src="./images/dice-5.png" alt="Dice" class="dice" id="dice-1" />
+      <img src="./images/dice-1.png" alt="Dice" class="dice" id="dice-2" />
     </div>
 
     <script src="app.js"></script>
